--- a/src/pages-css/global.css
+++ b/src/pages-css/global.css
@@ -1,15 +1,81 @@
 :root {
-  --white: hsl(100, 100, 100);
-  --black: hsl(0, 0, 0);
-  --green-300: hsl(168, 41, 84);
-  --green-500: hsl(171, 39, 55);
-  --purple-500: hsl(274, 83, 27);
+  --white: hsl(100, 100%, 100%);
+  --black: hsl(0, 0%, 0%);
+  --green-300: hsl(168, 41%, 84%);
+  --green-500: hsl(171, 39%, 55%);
+  --purple-500: hsl(274, 83%, 27%);
   /* fonts */
   --font-display: "ABeeZee", Helvetica, sans-serif;
   --font-main: "Poppins", Helvetica, sans-serif;
+  /* typeface */
+  --base-size: 1rem;
+  --type-scale: 1.125;
+  --h6: calc(var(--base-size) * var(--type-scale));
+  --h5: calc(var(--h6) * var(--type-scale));
+  --h4: calc(var(--h5) * var(--type-scale));
+  --h3: calc(var(--h4) * var(--type-scale));
+  --h2: calc(var(--h3) * var(--type-scale));
+  --h1: calc(var(--h2) * var(--type-scale));
+  --light: 300;
+  --regular: 400;
+  --bold: 600;
+  /* spacing */
+  --unit: 16px;
+  --xxs: calc(var(--unit) * 0.25);
+  --xs: calc(var(--unit) * 0.5);
+  --s: calc(var(--unit) * 0.75);
+  --m: calc(var(--unit) * 1);
+  --l: calc(var(--unit) * 1.25);
+  --l1: calc(var(--unit) * 1.5);
+  --l2: calc(var(--unit) * 2);
+  --l3: calc(var(--unit) * 3);
+  --l4: calc(var(--unit) * 4);
+  --l5: calc(var(--unit) * 5);
+  /* viewport dimensions */
+  --min-width: 375px;
+  --desktop: 768px;
 }
 
-html,
-body {
-  font-family: var(--font-main);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
+}
+
+h1 {
+  font-size: var(--h1);
+  font-family: var(--font-display);
+}
+
+h2 {
+  font-size: var(--h2);
+}
+
+h3 {
+  font-size: var(--h3);
+}
+
+h4 {
+  font-size: var(--h4);
+}
+
+h5 {
+  font-size: var(--h5);
+}
+
+h6 {
+  font-size: var(--h6);
+}
+
+p {
+  font-size: var(--base-size);
+}
+
+@media (min-width: 768px) {
+  :root {
+    --type-scale: 1.2;
+  }
 }
