--- a/src/pages-css/global.css
+++ b/src/pages-css/global.css
@@ -10,6 +10,7 @@
   /* typeface */
   --base-size: 1rem;
   --type-scale: 1.125;
+  --small: calc(var(--base-size) * 0.8);
   --h6: calc(var(--base-size) * var(--type-scale));
   --h5: calc(var(--h6) * var(--type-scale));
   --h4: calc(var(--h5) * var(--type-scale));
