--- a/src/pages-css/global.css
+++ b/src/pages-css/global.css
@@ -35,6 +35,10 @@
   /* viewport dimensions */
   --min-width: 375px;
   --desktop: 768px;
+  /* radii */
+  --radius-sharp: 3px;
+  --radius-soft: 10px;
+  --radius-round: 50%;
 }
 
 h1,
