--- a/src/pages-css/about.module.css
+++ b/src/pages-css/about.module.css
@@ -1,8 +1,13 @@
 .About {
+  --color-title: var(--purple-500);
+  --size-title-m: var(--h4);
   --padding-layout-m: var(--l);
   --padding-card-m: var(--xs);
-  --margin-section-m: var(--xs) 0;
+  --margin-section-m: var(--l) 0;
   --margin-copy-intro-m: 0 0 0 var(--m);
+  --margin-image: var(--l3) 0;
+  --margin-title: 0 0 var(--m) 0;
+  --border-radius-img: var(--radius-soft);
 }
 
 .About {
@@ -13,13 +18,28 @@
   flex-direction: column;
 }
 
+.About p {
+  margin: 0;
+}
+
+.About__Title {
+  color: var(--color-title);
+  font-size: var(--size-title-m);
+  margin: var(--margin-title);
+}
+
 .About__Section {
   margin: var(--margin-section-m);
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+
+.About__Section img {
+  margin: var(--margin-image);
+  border-radius: var(--border-radius-img);
 }
 
 .Copy__Intro {
