--- a/src/pages-css/global.css
+++ b/src/pages-css/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=ABeeZee&family=Poppins:ital,wght@0,400;0,500;1,400;1,700&display=swap");
+
 :root {
   --white: hsl(100, 100%, 100%);
   --black: hsl(0, 0%, 0%);
