--- a/src/pages-css/index.module.css
+++ b/src/pages-css/index.module.css
@@ -1,14 +1,18 @@
 .Index {
+  /* Mobile First */
   --padding-layout-m: var(--l3) var(--l);
-  --padding-card-m: var(--xs);
-  --margin-section-m: var(--l2) 0 var(--l5) 0;
-  --margin-copy-intro-m: var(--l4) 0 0 var(--m);
-  --margin-testimonial-m: 0 0 var(--m) 0;
-  --size-author-m: var(--small);
-  --size-font-intro: var(--h6);
   --height-intro: 300px;
   --color-intro-bg: var(--green-300);
   --radius-intro: var(--radius-soft);
+  --size-font-intro: var(--h6);
+
+  /* Desktop */
+  --margin-title-d: 0 0 var(--m) 0;
+  --margin-profile-d: 0 50px 0 0;
+  --pos-top-intro-d: 70px;
+  --pos-left-intro-d: -35px;
+  --padding-intro-d: 0 80px 0 0;
+  --height-line-intro-d: 32px;
 }
 
 .Index {
@@ -26,6 +30,11 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+}
+
+.About > * {
+  opacity: 65%;
 }
 
 /* 
@@ -59,16 +68,72 @@
   text-align: center;
 } */
 
+.About__Section {
+  position: absolute;
+  margin: var(--margin-section-m);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.About__Personality {
+  left: 0;
+}
+.About__Uses {
+  right: 0;
+}
+
+.List__Headings,
+.List .Card__Container,
+.List__Skills {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: var(--padding-card-m);
+  text-transform: capitalize;
+}
+
+.List__Headings *,
+.List .Card__Container *,
+.List__Skills * {
+  flex: 1;
+}
+
+.List__Headings > *:not(:first-child),
+.List .Card__Container > *:not(:first-child) {
+  margin: var(--margin-keywords-col);
+}
+
+.List__Skills > *:not(:first-child) {
+  margin: var(--margin-skills-col);
+}
+
+.List__Headings li,
+.List .Card__Container li,
+.List__Skills li {
+  font-size: var(--size-keywords);
+  margin: var(--margin-keywords-row);
+}
+
+.List__Headings,
+.List__Skills {
+  padding: var(--padding-skills);
+}
+
 @media (min-width: 768px) {
   .Index__Section {
     flex-direction: row;
     align-items: flex-start;
+    margin: 0 0 250px 0;
   }
 
   .Title {
     height: 100%;
     font-size: var(--h1);
-    margin: 0 0 var(--m) 0;
+    margin: var(--margin-title-d);
   }
 
   .Profile {
@@ -77,6 +142,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: var(--margin-profile-d);
   }
 
   .Intro {
@@ -92,12 +158,21 @@
   .Intro__Text {
     height: var(--height-intro);
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: var(--pos-top-intro-d);
+    left: var(--pos-left-intro-d);
+    padding: var(--padding-intro-d);
   }
 
   .Copy__Intro {
     font-size: var(--size-font-intro);
-    line-height: 32px;
+    line-height: var(--height-line-intro-d);
+  }
+
+  .About {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
