--- a/src/pages-css/index.module.css
+++ b/src/pages-css/index.module.css
@@ -3,15 +3,21 @@
   --padding-layout-m: var(--l3) var(--l) var(--l) var(--l);
   --height-intro: 300px;
   --color-intro-bg: var(--green-300);
+  --color-titles: var(--purple-500);
   --radius-intro: var(--radius-soft);
   --size-font-intro: var(--h6);
+  --margin-skills-col: 0 0 0 var(--l);
+  --margin-keywords-col: 0 0 0 var(--s);
+  --margin-keywords-row: var(--s) 0;
 
   /* Desktop */
   --margin-title-d: 0 0 var(--m) 0;
   --margin-profile-d: 0 50px 0 0;
+  --margin-section-m: 0 0 350px 0;
   --pos-top-intro-d: 70px;
   --pos-left-intro-d: -35px;
   --padding-intro-d: 0 80px 0 0;
+  --padding-skills: 0 var(--xs);
   --height-line-intro-d: 32px;
 }
 
@@ -41,56 +47,23 @@
   opacity: 65%;
 }
 
-/* 
-
-
-
-.Index__Section.Brand {
-  justify-self: flex-start;
+.Personality__Container {
+  position: relative;
 }
 
-.Card__Container {
-  padding: var(--padding-card-m);
-}
-
-.Copy__Intro {
-  margin: var(--margin-copy-intro-m);
-  font-size: var(--size-font-intro);
-}
-
-.Copy__QuoteImage {
-  text-align: center;
-}
-
-.Testimonial {
-  margin: var(--margin-testimonial-m);
-  font-style: italic;
-}
-
-.Testimonial__Author {
-  font-size: var(--size-author-m);
-  text-align: center;
-} */
-
-.About__Section {
+.Personality__Bubbles {
   position: absolute;
-  margin: var(--margin-section-m);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  top: 0;
 }
 
-.About__Personality {
-  left: 0;
-}
 .About__Uses {
   right: 0;
 }
 
 .List__Headings,
-.List .Card__Container,
+.List .List__Uses,
 .List__Skills {
+  z-index: 100;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -101,13 +74,13 @@
 }
 
 .List__Headings *,
-.List .Card__Container *,
+.List .List__Uses *,
 .List__Skills * {
   flex: 1;
 }
 
 .List__Headings > *:not(:first-child),
-.List .Card__Container > *:not(:first-child) {
+.List .List__Uses > *:not(:first-child) {
   margin: var(--margin-keywords-col);
 }
 
@@ -116,15 +89,21 @@
 }
 
 .List__Headings li,
-.List .Card__Container li,
+.List .List__Uses li,
 .List__Skills li {
   font-size: var(--size-keywords);
   margin: var(--margin-keywords-row);
 }
 
 .List__Headings,
-.List__Skills {
-  padding: var(--padding-skills);
+.List__Skills,
+.List__Uses {
+  position: relative;
+  z-index: 100;
+}
+
+.List__Headings > * {
+  font-weight: 500;
 }
 
 .Contact {
@@ -135,13 +114,17 @@
   .Index__Section {
     flex-direction: row;
     align-items: flex-start;
-    margin: 0 0 250px 0;
+    margin: var(--margin-section-m);
   }
 
   .Title {
     height: 100%;
     font-size: var(--h1);
     margin: var(--margin-title-d);
+  }
+
+  .Headings {
+    color: var(--color-titles);
   }
 
   .Profile {
@@ -164,6 +147,7 @@
   }
 
   .Intro__Text {
+    width: 110%;
     height: var(--height-intro);
     position: absolute;
     top: var(--pos-top-intro-d);
@@ -176,11 +160,78 @@
     line-height: var(--height-line-intro-d);
   }
 
-  .About {
+  .About__Image {
     width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .About__Section {
+    max-height: 50%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .About__Personality {
+    width: 50%;
+    top: 60%;
+    left: -15%;
+  }
+
+  .Personality__Container,
+  .Uses__Container {
+    max-width: 500px;
+  }
+
+  .Bubbles__1 {
+    height: 250%;
+    position: absolute;
+    top: -45%;
+  }
+
+  .Bubbles__2 {
+    position: absolute;
+    top: -70%;
+    height: 225%;
+    right: -97%;
+  }
+
+  .Quote {
+    position: absolute;
+    top: -20%;
+    left: -6%;
+    max-height: 100px;
+  }
+
+  .Testimonial__Image {
+    flex: 1;
+  }
+
+  .Title__Testimonial {
+    position: absolute;
+    top: -24%;
+    right: 0;
+  }
+
+  .Testimonial {
+    font-style: italic;
+    line-height: var(--height-line-intro-d);
+    font-size: var(--h5);
+  }
+  .Testimonial__Author {
+    margin: 20px 0 0 0;
+    font-size: var(--h6);
+    color: var(--grey);
+  }
+}
+
+@media (min-width: 1900px) {
+  .Intro__Text {
+    width: 100%;
   }
 }
