--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -10,7 +10,7 @@
 .Contact {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
@@ -19,9 +19,9 @@
 .Contact__Info {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: nowrap;
 }
 
@@ -67,6 +67,10 @@
 }
 
 @media (min-width: 1100px) {
+  .Contact__Info {
+    flex-direction: row;
+    align-items: center;
+  }
   .Info__Item a {
     font-size: var(--size-font-m);
   }
