--- a/src/components/project-preview/project-preview.module.css
+++ b/src/components/project-preview/project-preview.module.css
@@ -5,7 +5,7 @@
   --padding-button: var(--s) var(--m);
   --color-keyword: var(--grey);
   --color-title: var(--black);
-  --position-button: var(--s);
+  --position-button-mini: var(--s);
   --color-bg-button: var(--green-300);
   --shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 20px rgba(0, 0, 0, 0.25);
   --shadow-button: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -16,18 +16,25 @@
   width: 100%;
   flex: 1;
   display: flex;
-  flex-direction: column;
-  border-radius: var(--radius-card);
   padding: 0;
+  border-radius: var(--radius-card);
   min-height: 100px;
   min-height: 300px;
   box-shadow: var(--shadow);
 }
 
+.Preview__Card.Preview__Mini {
+  flex-direction: column;
+}
+
 .Preview__Info {
-  flex: 0;
+  flex: 1;
   display: flex;
   flex-direction: column;
+}
+
+.Preview__Card.Preview__Mini .Preview__Info {
+  flex: 0;
   padding: var(--padding-info);
 }
 
@@ -45,18 +52,35 @@
 }
 
 .Preview__Image {
+  max-height: 239px;
   flex: 1;
   position: relative;
+  overflow: hidden;
+  border-radius: 0 0 var(--radius-card) var(--radius-card);
 }
 
+.Preview__Image img {
+  width: 100%;
+  height: 100%;
+}
+
+/* Button */
 .Preview__Button {
   cursor: pointer;
   position: absolute;
-  bottom: var(--position-button);
-  right: var(--position-button);
   background-color: var(--color-bg-button);
   border-radius: var(--radius-button);
   padding: var(--padding-button);
   box-shadow: var(--shadow-button);
   font-size: var(--size-button);
+}
+
+.Preview__Card .Preview__Button {
+  bottom: var(--position-button);
+  right: var(--position-button);
+}
+
+.Preview__Card.Preview__Mini .Preview__Button {
+  bottom: var(--position-button-mini);
+  right: var(--position-button-mini);
 }
