--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,10 +1,10 @@
 .Contact {
   --size-font-s: var(--small);
-  --size-font-m: var(--base-size);
+  --size-font-m: var(--small);
   --size-font-l: var(--h6);
   --color: var(--purple-500);
   --margin-li: var(--xs) 0;
-  --margin-a: 0 var(--s);
+  --margin-a: 0 var(--s) 0 var(--xs);
 }
 
 .Contact {
