--- a/src/pages-css/global.css
+++ b/src/pages-css/global.css
@@ -13,7 +13,8 @@
   /* typeface */
   --base-size: 1.2rem;
   --type-scale: 1.1;
-  --small: calc(var(--base-size) * 0.8);
+  --small: calc(var(--base-size) * 0.65 * var(--type-scale));
+  --p: calc(var(--base-size) * 0.8 * var(--type-scale));
   --h6: calc(var(--base-size) * var(--type-scale));
   --h5: calc(var(--h6) * var(--type-scale));
   --h4: calc(var(--h5) * var(--type-scale));
@@ -80,7 +81,7 @@ h6 {
 }
 
 p {
-  font-size: var(--h6);
+  font-size: var(--p);
 }
 
 main {
