--- a/src/components/project-preview/project-preview.module.css
+++ b/src/components/project-preview/project-preview.module.css
@@ -20,8 +20,9 @@
   flex-direction: row-reverse;
   padding: 0;
   border-radius: var(--radius-card);
-  min-height: 370px;
+  min-height: 300px;
   box-shadow: var(--shadow);
+  position: relative;
 }
 
 .Preview__Card.Preview__Mini {
@@ -63,7 +64,7 @@
 }
 
 .Preview__Image {
-  max-height: 370px;
+  max-height: 300px;
   max-width: 50%;
   flex: 1;
   position: relative;
@@ -71,30 +72,23 @@
   border-radius: 0 0 0 var(--radius-card);
 }
 
-.Preview__Image img {
+.Preview__Image > *,
+.Preview__Mini .Preview__Image > * {
   width: 100%;
   height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
-.Preview__Mini.Image__Off__Center .Preview__Image img {
-  transform: translateY(-25%);
-}
-
-.Preview__Image > *:first-child {
-  height: 100%;
+.Preview__Mini .Preview__Image > * {
+  min-height: 173px;
 }
 
 .Preview__Mini .Preview__Image {
   max-height: 245px;
   max-width: unset;
-  flex: 1;
-  position: relative;
-  overflow: hidden;
   border-radius: 0 0 var(--radius-card) var(--radius-card);
-}
-
-.Preview__Mini .Preview__Image > * {
-  height: unset;
 }
 
 /* Button */
