--- a/src/components/project-preview/project-preview.module.css
+++ b/src/components/project-preview/project-preview.module.css
@@ -69,7 +69,7 @@
   flex: 1;
   position: relative;
   overflow: hidden;
-  border-radius: 0 0 0 var(--radius-card);
+  border-radius: var(--radius-card) 0 0 var(--radius-card);
 }
 
 .Preview__Image > *,
