--- a/src/components/skill-bar/bar/bar.module.css
+++ b/src/components/skill-bar/bar/bar.module.css
@@ -19,6 +19,7 @@
   border-radius: var(--radius-round);
   background-color: var(--color-green);
   height: var(--height-bar);
+  width: 100%;
 }
 
 .Bar__Top {
