--- a/src/pages-css/global.css
+++ b/src/pages-css/global.css
@@ -2,7 +2,10 @@
 
 :root {
   --white: hsl(100, 100%, 100%);
+  --peach-500: hsl(27, 74%, 91%);
+  --peach-800: hsla(22, 71%, 73%, 0.9);
   --black: hsl(0, 0%, 0%);
+  --green-200: hsl(166, 41%, 92%);
   --green-300: hsl(168, 41%, 84%);
   --green-500: hsl(171, 39%, 55%);
   --purple-500: hsl(274, 83%, 27%);
