--- a/src/pages-css/index.module.css
+++ b/src/pages-css/index.module.css
@@ -1,18 +1,22 @@
 .Index {
   /* Mobile First */
   --padding-layout-s: var(--l3) 0;
+  --padding-personality: var(--m);
   --height-intro: 300px;
   --color-intro-bg: var(--green-300);
   --color-titles: var(--purple-500);
+  --color-bg-mint: var(--green-200);
+  --color-bg-peach: var(--peach-500);
+  --color-bg-peach-dark: var(--peach-800);
   --radius-intro: var(--radius-soft);
+  --radius-personality: var(--radius-round);
   --size-font-intro: var(--h6);
-  --margin-skills-col: 0 0 0 var(--l);
-  --margin-keywords-col: 0 0 0 var(--s);
-  --margin-keywords-row: var(--s) 0;
   --margin-case-m: var(--s);
   --margin-case-d: var(--s) var(--s) var(--s) 0;
   --margin-case-last: var(--s) 0 var(--s) var(--s);
   --margin-section-s: 0 0 150px 0;
+  --margin-skills-row: 0 0 var(--s) 0;
+  --margin-personality-title: 0 0 var(--xs) 0;
 
   /* Desktop */
   --padding-layout-d: var(--l3) var(--l) var(--l) var(--l);
@@ -24,6 +28,12 @@
   --padding-intro-d: 0 80px 0 0;
   --padding-skills: 0 var(--xs);
   --height-line-intro-d: 32px;
+  --size-circle-s: 230px;
+  --size-circle-m: 300px;
+  --size-circle-l: 320px;
+  --size-circle-dec-s: 24px;
+  --size-circle-dec-m: 33px;
+  --size-circle-dec-l: 65px;
 }
 
 .Index {
@@ -58,77 +68,6 @@
 
 .About > * {
   opacity: 65%;
-}
-
-.Personality__Container,
-.Uses__Container {
-  position: relative;
-  width: 100%;
-}
-
-.Personality__Bubbles {
-  position: absolute;
-  top: 0;
-}
-
-.About__Section {
-  max-height: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  right: 5%;
-}
-
-.About__Uses {
-  right: 0;
-}
-
-.List__Headings,
-.List .List__Uses,
-.List__Skills {
-  z-index: 100;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: var(--padding-card-m);
-  text-transform: capitalize;
-}
-
-.List__Headings *,
-.List .List__Uses *,
-.List__Skills * {
-  flex: 1;
-}
-
-.List__Headings > *:not(:first-child),
-.List .List__Uses > *:not(:first-child) {
-  min-width: 140px;
-}
-
-.List__Skills > *:not(:first-child) {
-  margin: var(--margin-skills-col);
-  min-width: 140px;
-}
-
-.List__Headings li,
-.List .List__Uses li,
-.List__Skills li {
-  font-size: var(--size-keywords);
-  margin: var(--margin-keywords-row);
-}
-
-.List__Headings,
-.List__Skills,
-.List__Uses {
-  position: relative;
-  z-index: 100;
-}
-
-.List__Headings > * {
-  font-weight: 500;
 }
 
 .Contact {
@@ -172,15 +111,98 @@
   display: none;
 }
 
-.About__Personality,
-.About__Uses {
-  width: 100%;
-}
-
 .Quote {
   max-height: 25px;
 }
 
+.Personality__Container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.Personality__Container > * {
+  position: absolute;
+}
+
+.Personality__Item {
+  padding: var(--padding-personality);
+  border-radius: var(--radius-personality);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.Mint {
+  background-color: var(--color-bg-mint);
+}
+
+.Peach {
+  background-color: var(--color-bg-peach);
+}
+
+.Peach__Dark {
+  background-color: var(--color-bg-peach-dark);
+}
+
+.Personality__Item.Small {
+  width: var(--size-circle-s);
+  height: var(--size-circle-s);
+}
+
+.Personality__Item.Medium {
+  width: var(--size-circle-m);
+  height: var(--size-circle-m);
+}
+
+.Personality__Item.Large {
+  width: var(--size-circle-l);
+  height: var(--size-circle-l);
+}
+
+.Personality__Item__Title {
+  font-weight: 500;
+}
+
+.Skillbar:not(:last-child) {
+  margin: var(--margin-skills-row);
+}
+
+.Personality__Item > * {
+  position: absolute;
+  width: 45%;
+}
+
+.Personality__Item__Title {
+  margin: var(--margin-personality-title);
+}
+
+.Personality__Item li {
+  text-transform: capitalize;
+  font-size: var(--small);
+  white-space: nowrap;
+}
+
+/* Decorative circles */
+.Circle__Decorative.Small {
+  border-radius: var(--radius-personality);
+  width: var(--size-circle-dec-s);
+  height: var(--size-circle-dec-s);
+}
+
+.Circle__Decorative.Medium {
+  border-radius: var(--radius-personality);
+  width: var(--size-circle-dec-m);
+  height: var(--size-circle-dec-m);
+}
+.Circle__Decorative.Large {
+  border-radius: var(--radius-personality);
+  width: var(--size-circle-dec-l);
+  height: var(--size-circle-dec-l);
+}
+/* Desktop */
 @media (min-width: 1000px) {
   .Index {
     padding: var(--padding-layout-d);
@@ -230,53 +252,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-
-  .List__Headings li,
-  .List .List__Uses li,
-  .List__Skills li {
-    font-size: var(--size-keywords);
-    margin: var(--margin-keywords-row);
-    white-space: nowrap;
-    min-width: 140px;
-  }
-
-  .About__Section {
-    position: absolute;
-  }
-
-  .About__Personality {
-    width: 50%;
-    top: 60%;
-    left: -15%;
-  }
-
-  .About__Uses {
-    width: unset;
-  }
-
-  .Personality__Container,
-  .Uses__Container {
-    max-width: 500px;
-  }
-
-  .Bubbles__1,
-  .Bubbles__2 {
-    position: absolute;
-    display: unset;
-  }
-
-  .Bubbles__1 {
-    height: 250%;
-    position: absolute;
-    top: -45%;
-  }
-
-  .Bubbles__2 {
-    position: absolute;
-    top: -70%;
-    height: 225%;
-    right: -80%;
   }
 
   .Quote {
