--- a/src/components/skill-bar/bar/bar.module.css
+++ b/src/components/skill-bar/bar/bar.module.css
@@ -1,10 +1,12 @@
 .Bar__Container {
   --radius-round: 25px;
-  --rdaius-circle: 50px;
+  --radius-circle: 50px;
   --color-purple: var(--purple-500);
   --color-green: var(--green-500);
   --height-bar: 10px;
   --height-point: 14px;
+  --size-dot: 20px;
+  --margin-dot: 0 var(--xxs) 0 0;
 }
 
 .Bar__Container {
@@ -33,8 +35,27 @@
 .Bar__Point {
   position: absolute;
   z-index: 1;
-  border-radius: var(--rdaius-circle);
+  border-radius: var(--radius-circle);
   background-color: var(--color-purple);
   height: var(--height-point);
   width: var(--height-point);
+}
+
+.Dot {
+  width: var(--size-dot);
+  height: var(--size-dot);
+  border-radius: var(--radius-circle);
+}
+
+.Dot:not(:last-child) {
+  margin: var(--margin-dot);
+}
+
+.Filled {
+  background-color: var(--color-purple);
+}
+
+.Empty {
+  background-color: transparent;
+  border: 1px solid var(--color-purple);
 }
