--- a/src/components/skill-bar/skill-bar.module.css
+++ b/src/components/skill-bar/skill-bar.module.css
@@ -1,5 +1,12 @@
-.Labels {
+.Skillbar__Container {
   --size-font: var(--small);
+}
+
+.Skillbar__Container.Dots {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
 }
 
 .Labels {
