--- a/src/pages-css/index.module.css
+++ b/src/pages-css/index.module.css
@@ -116,9 +116,17 @@
   max-height: 25px;
 }
 
-.Personality__Container {
+.Personality__Wrapper {
   width: 100%;
   height: 800px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.Personality__Container {
+  width: 980px;
+  height: 100%;
   position: relative;
 }
 
@@ -132,6 +140,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.1s ease-in;
+}
+
+.Personality__Item:hover {
+  transform: scale(1.1);
+  transition: all 0.2s ease-out;
 }
 
 .Mint {
@@ -269,6 +283,130 @@
 #decorativePeachDark2 {
   top: 420px;
   left: 930px;
+}
+
+@media (max-width: 1140px) {
+  #motivations {
+    top: 0;
+    left: 0;
+  }
+
+  #skills {
+    top: 100px;
+    left: 300px;
+  }
+
+  #worksWith {
+    top: 400px;
+    left: 600px;
+  }
+
+  #hobbies {
+    top: 320px;
+    left: 50px;
+  }
+
+  #personality {
+    top: 470px;
+    left: 250px;
+  }
+
+  #decorativeMint1 {
+    top: 0;
+    right: 0;
+  }
+
+  #decorativeMint2 {
+    top: 500px;
+    left: 25px;
+  }
+
+  #decorativeMint3 {
+    top: 340px;
+    left: 790px;
+  }
+
+  #decorativePeach1 {
+    top: 25px;
+    left: 720px;
+  }
+
+  #decorativePeach2 {
+    top: 430px;
+    left: -20px;
+  }
+
+  #decorativePeachDark1 {
+    top: 560px;
+    left: 20px;
+  }
+
+  #decorativePeachDark2 {
+    top: 300px;
+    left: 700px;
+  }
+}
+
+@media (max-width: 950px) {
+  #motivations {
+    top: 0;
+    left: 0;
+  }
+
+  #skills {
+    top: 0;
+    left: 350px;
+  }
+
+  #hobbies {
+    top: 320px;
+    left: 100px;
+  }
+
+  #personality {
+    top: 400px;
+    left: 350px;
+  }
+
+  #worksWith {
+    top: 600px;
+    left: 100px;
+  }
+
+  #decorativeMint1,
+  #decorativeMint2,
+  #decorativeMint3,
+  #decorativePeach1,
+  #decorativePeach2,
+  #decorativePeachDark1,
+  #decorativePeachDark2 {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .Personality__Wrapper {
+    height: unset;
+  }
+  .Personality__Container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .Personality__Container > * {
+    flex: 1;
+  }
+  #motivations,
+  #skills,
+  #hobbies,
+  #personality,
+  #worksWith {
+    position: relative;
+    top: unset;
+    left: unset;
+    right: unset;
+  }
 }
 
 /* Desktop */
