Updated styling and about content

--- a/src/pages-css/about.module.css
+++ b/src/pages-css/about.module.css
@@ -1,8 +1,16 @@
 .About {
   --color-title: var(--purple-500);
   --margin-p-d: 40px 0;
+  --padding-layout-s: var(--l3) 0;
+  /* Desktop */
+  --padding-layout-d: var(--l3) var(--l) var(--l) var(--l);
 }
 .About {
+  padding: var(--padding-layout-s);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .About__Title {
@@ -22,4 +30,10 @@
 
 .About p {
   margin: var(--margin-p-d);
+}
+
+@media (min-width: 1000px) {
+  .About {
+    padding: var(--padding-layout-d);
+  }
 }
