--- a/src/pages-css/index.module.css
+++ b/src/pages-css/index.module.css
@@ -1,4 +1,5 @@
 .Index {
+  --color-links: var(--black);
   /* Mobile First */
   --padding-layout-s: var(--l3) 0;
   --padding-personality: var(--m);
@@ -105,6 +106,7 @@
 }
 
 .Link__Card {
+  color: var(--color-links);
   text-decoration: none;
 }
 
